@@ -61,6 +61,8 @@ Contributors (alphabetically ordered):
 	EAGLView destroys and recreates all OpenGL buffers correctly
 	TileMap: flipped tiles can be changed during runtime
 
+* Mark Haylock
+    Fix for CCParticleSystem to unschedule update method when deallocated
 * Martin 
 	Co-author of animated particle system
 
@@ -82,6 +84,7 @@ Contributors (alphabetically ordered):
 * Samuel J. Grabski http://www.sg7.com
 	Created a new touchdispatcher implementation
     New touchdispatcher performance tests
+    Fix for touchdispatcher
     
 * Scott Lembcke (AKA slembcke) (http://chipmunk-physics.net/)
 	Improved ARC compatiblity code
@@ -92,6 +95,7 @@ Contributors (alphabetically ordered):
 * Shakthi:
 	Added CCNode#onExitTransitionDidStart method
 	Fixed fading background music issue
+    Made CCLOG a bit more verbose
     
 * Skyhawk (http://www.hkasoftware.com) 
     Fix for addFrame method in CCAnimation
