@@ -342,6 +342,8 @@
 
 -(void) dealloc
 {
+	[self unscheduleUpdate];
+
 	free( particles );
 
 	if (animationFrameData_) 
